overflow fix.

--- a/css/jquery-confirm.less
+++ b/css/jquery-confirm.less
@@ -17,7 +17,7 @@
   }
 }
 
-body[class~="jconfirm-no-scroll-"] {
+body[class*=jconfirm-no-scroll-] {
   overflow: hidden !important;
 }
 
